[package]
name = "image-dimmer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
image = { version = "0.25.6", features = ["webp", "png"] }
kmeans_colors = "0.7.0"
palette = "0.7.6"
reqwest = { version = "0.12.20", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }


[dev-dependencies]
tempfile = "3"
httpmock = "0.7.0"
